style: change the basic style for all page and main page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <hr/>
                 <br/>
                 <!--Assginment  page-->
-                <div class="Assignment 1">
+                <div class="Assignment">
                     <form action="Assignment/hw1.html">
                         <input type="submit" value="Assignment 1" class="botton">
                     </form>
@@ -32,8 +32,14 @@
                 </div>
                 <br/>
                 <hr/>
+                <br/>
+                <!--Assginment  page-->
+                <div class="lab">
+                    <form action="Lab/lab1.html">
+                        <input type="submit" value="Lab 1" class="botton">
+                    </form>
+                </div>
             </div>
         </div>
-
     </body>
 </html>
