Bug Fix: fix the style and js linking

--- a/Project/Animation/animation.html
+++ b/Project/Animation/animation.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8"/>
     <title>CISC3610 Animation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link rel="stylesheet" type="text/css" href="/css/universal.css">
+    <link rel="stylesheet" type="text/css" href="../../css/universal.css">
     <link rel="stylesheet" type="text/css" href="css/animation.css">
-    <script type="text/javascript" src="/JS/universal.js"></script>
+    <script type="text/javascript" src="../../JS/universal.js"></script>
     <script type="text/javascript" src="JS/framData.js"></script>
     <script type="text/javascript" src="JS/animation.js"></script>
 </head>
