Bug Fix: fix the style and js linking

--- a/Lab/Audio/Audio.html
+++ b/Lab/Audio/Audio.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>LAB 2 Audio</title>
-        <link rel="stylesheet" tyep="text/css" href="/css/universal.css" />
+        <link rel="stylesheet" tyep="text/css" href="../../css/universal.css" />
         <link rel="stylesheet" type="text/css" href="css/audio.css" />
-        <script type="text/javascript" src="/JS/universal.js"></script>
+        <script type="text/javascript" src="../../JS/universal.js"></script>
         <script type="text/javascript" src="JS/Audio.js"></script>
     </head>
 
