--- a/Lab/JSON_Fruit/Fruit.html
+++ b/Lab/JSON_Fruit/Fruit.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" tyep="text/css" href="/css/universal.css" />
+    <link rel="stylesheet" tyep="text/css" href="../../css/universal.css" />
     <title>LAB 1</title>
-    <script type="text/javascript" src="/JS/universal.js"></script>
+    <script type="text/javascript" src="../../JS/universal.js"></script>
     <script type="text/javascript" src="JS/Fruit.js"></script>
 </head>
 <body>
