--- a/Project/Cartoon/Cartoon.html
+++ b/Project/Cartoon/Cartoon.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8"/>
     <title>CISC3610 HW1 Canvas Picture</title>
-    <link rel="stylesheet" type="text/css" href="/css/index.css">
+    <link rel="stylesheet" type="text/css" href="../../css/universal.css">
     <link rel="stylesheet" type="text/css" href="css/Cartoon.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <script type="text/javascript" src="/JS/index.js"></script>
+    <script type="text/javascript" src="../../JS/universal.js"></script>
     <script type="text/javascript" src="JS/hw1.js"></script>
 </head>
 <body>
