--- a/Project/Data_Visualization/datachart.html
+++ b/Project/Data_Visualization/datachart.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data Visualization</title>
-    <link rel="stylesheet" type="text/css" href="/css/universal.css" />
+    <link rel="stylesheet" type="text/css" href="../../css/universal.css" />
     <link rel="stylesheet" type="text/css" href="css/datachart.css" />
-    <script type="text/javascript" src="/JS/universal.js"></script>
+    <script type="text/javascript" src="../../JS/universal.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="text/javascript" src="JS/datachart.js"></script>
 <body>
