--- a/Project/Form/Form.html
+++ b/Project/Form/Form.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LAB 2</title>
-    <link rel="stylesheet" tyep="text/css" href="/css/universal.css" />
+    <link rel="stylesheet" tyep="text/css" href="../../css/universal.css" />
     <link rel="stylesheet" tyep="text/css" href="css/From.css" />
-    <script type="text/javascript" src="/JS/universal.js"></script>
+    <script type="text/javascript" src="../../JS/universal.js"></script>
     <script type="text/javascript" src="JS/Form.js"></script>
 </head>
 <body>
