Bug Fix: correct html display title

--- a/Lab/JSON_Fruit/Fruit.html
+++ b/Lab/JSON_Fruit/Fruit.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" tyep="text/css" href="../../css/universal.css" />
-    <title>LAB 1</title>
+    <title>Json Fruit</title>
     <script type="text/javascript" src="../../JS/universal.js"></script>
     <script type="text/javascript" src="JS/Fruit.js"></script>
 </head>
