--- a/Project/Cartoon/Cartoon.html
+++ b/Project/Cartoon/Cartoon.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <title>CISC3610 HW1 Canvas Picture</title>
+    <title>Cartoon</title>
     <link rel="stylesheet" type="text/css" href="../../css/universal.css">
     <link rel="stylesheet" type="text/css" href="css/Cartoon.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
