--- a/Lab/Audio/Audio.html
+++ b/Lab/Audio/Audio.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>LAB 2 Audio</title>
+        <title>Audio</title>
         <link rel="stylesheet" tyep="text/css" href="../../css/universal.css" />
         <link rel="stylesheet" type="text/css" href="css/audio.css" />
         <script type="text/javascript" src="../../JS/universal.js"></script>
