--- a/Project/Animation/animation.html
+++ b/Project/Animation/animation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <title>CISC3610 Animation</title>
+    <title>Animation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" type="text/css" href="../../css/universal.css">
     <link rel="stylesheet" type="text/css" href="css/animation.css">
