feat: add linking to new projects and labs

--- a/index.html
+++ b/index.html
@@ -71,6 +71,26 @@
                 </center>
             </div>
 
+            <br />
+
+            <div class="Selection">
+                <center>
+                    <form action="Project/Video_Animation/video_animation.html" class="click_able">
+                        <input type="submit" value="Video Animation" class="botton">
+                    </form>
+                </center>
+            </div>
+
+            <br />
+
+            <div class="Selection">
+                <center>
+                    <form action="Project/Wick_Editor_Menu_Layout/menu_layout.html" class="click_able">
+                        <input type="submit" value="Wick Editor Menu Layout" class="botton">
+                    </form>
+                </center>
+            </div>
+
             <br /> <hr /> <br />
 
             <!--lab  page-->
@@ -88,6 +108,26 @@
                 <center>
                     <form action="Lab/Audio/Audio.html" class="click_able">
                         <input type="submit" value="Audio" class="botton">
+                    </form>
+                </center>
+            </div>
+
+            <br />
+
+            <div class="Selection">
+                <center>
+                    <form action="Lab/Bootstrap/bootstrap.html" class="click_able">
+                        <input type="submit" value="Bootstrap" class="botton">
+                    </form>
+                </center>
+            </div>
+
+            <br />
+
+            <div class="Selection">
+                <center>
+                    <form action="Lab/Resume/resume_home.html" class="click_able">
+                        <input type="submit" value="Resume" class="botton">
                     </form>
                 </center>
             </div>
