fix: fix contents display

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="Selection">
                 <center>
                     <form>
-                        <input type="submit" value="... UP-COMMING ..." class="botton">
+                        <input type="submit" value="... CSIC3610 Done ..." class="botton">
                     </form>
                 </center>
             </div>
