fix: fix video cannot play with chrome and firefox

--- a/Project/Video_Animation/video_animation.html
+++ b/Project/Video_Animation/video_animation.html
@@ -19,7 +19,7 @@
     <div class="content">
         <center>
         <video width="1080" height="720" controls>
-            <source src="./Assets/My_Project.mp4" type="video/mp4"> 
+            <source src="./Assets/My_Project.webm" type="video/webm"> 
         </video>
 
         <br>
